--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="home"></div>
-	<script src="assets/dist/bundle.js"></script>
+	<script src="./assets/dist/bundle.js"></script>
 </body>
 
 </html>
