--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="The Daniel Casper homepage, brought to you by the internets.">
 	<meta name="author" content="Daniel Casper">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="stylesheet" type="text/css" href="./assets/dist/main.css">
 </head>
 
 <body>
